--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -6,7 +6,7 @@
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item href="#" routerLink="blogs/list">Lista</a>
-      <a mat-list-item href="#" routerLink="blogs/form">Nowy blog</a>
+      <a mat-list-item href="#" routerLink="blogs/new">Nowy wpis</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
