--- a/client/src/app/blogs/blog-form/blog-form.component.css
+++ b/client/src/app/blogs/blog-form/blog-form.component.css
@@ -2,13 +2,29 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100%;
-}
-
-.single-input {
-  width: 25%;
 }
 
 .text-input {
   width: 50%;
+}
+
+button {
+  margin: 2em;
+}
+
+mat-form-field {
+  width: 1000px;
+}
+
+mat-card {
+  width: 80%;
+  height: 60%%;
+  text-align: center;
+  margin-top: 3em;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+mat-card-content {
+  font-size: 1.2em;
 }
