--- a/client/src/app/blogs/list/list.component.css
+++ b/client/src/app/blogs/list/list.component.css
@@ -1,9 +1,9 @@
 .blog-card {
-  margin: 1em;
-  max-width: 25%;
+  margin: 2em;
+  flex-basis: 20%;
+  flex-grow: 0;
   display: flex;
   flex-direction: column;
-  flex: 1;
 }
 
 .list {
@@ -19,4 +19,8 @@
 
 .align-center {
   flex-grow: 1;
+}
+
+img {
+  width: auto;
 }
