--- a/client/src/app/blogs/list/list.component.css
+++ b/client/src/app/blogs/list/list.component.css
@@ -10,6 +10,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  margin: 1em;
 }
 
 .align-bottom {
@@ -19,8 +20,4 @@
 
 .align-center {
   flex-grow: 1;
-}
-
-img {
-  width: auto;
 }
