--- a/client/src/app/blogs/list/list.component.html
+++ b/client/src/app/blogs/list/list.component.html
@@ -11,8 +11,36 @@
       <div *ngIf="blog.body.length>=300" [innerHTML]="blog.body.slice(0, 300)+ '...'"></div>
     </mat-card-content>
     <mat-card-actions class="align-bottom">
-      <button mat-raised-button color="warn">Pokaż</button>
+      <button mat-raised-button color="warn" routerLink="/blogs/{{blog.id}}">Pokaż</button>
       <button mat-raised-button color="accent" routerLink="/blogs/edit/{{blog.id}}">Edytuj</button>
     </mat-card-actions>
   </mat-card>
+</div>
+<div class="container">
+    <div class="description">
+        Lorem ipsum in ut amet aute eu nulla labore do exercitation magna aliquip commodo dolore aute fugiat labore dolore ad culpa dolore pariatur qui in sed est magna cillum nisi ex deserunt sit incididunt aliquip adipisicing in officia.
+    </div>
+    <div class="col">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore quam deserunt, reprehenderit! Saepe nesciunt laborum, sapiente autem laboriosam quaerat officia dolore similique enim, dolor placeat magni neque iure maiores. Dicta.       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore quam deserunt, reprehenderit! Saepe nesciunt laborum, sapiente autem laboriosam quaerat officia dolore similique enim, dolor placeat magni neque iure maiores. Dicta.      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore quam deserunt, reprehenderit! Saepe nesciunt laborum, sapiente autem laboriosam quaerat officia dolore similique enim, dolor placeat magni neque iure maiores. Dicta.
+    </div>
+    <div class="col">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore quam deserunt, reprehenderit! Saepe nesciunt laborum, sapiente autem laboriosam quaerat officia dolore similique enim, dolor placeat magni neque iure maiores. Dicta.
+    </div>
+    <div class="col">
+    </div>
+    <div class="col">
+    </div>
+    <div class="col">
+    </div>
+    <div class="col">
+    </div>
+    <div class="col">
+    </div>
+    <div class="col">
+              Lorem ipsum in ut amet aute eu nulla labore do exercitation magna aliquip commodo dolore aute fugiat labore dolore ad culpa dolore pariatur qui in sed est magna cillum nisi ex deserunt sit incididunt aliquip adipisicing in officia.
+    </div>
+    <div class="col">
+    </div>
+    <div class="col">
+    </div>
 </div>
